# binder

./: .gitignore  Cargo.toml  Dockerfile  Trunk.toml  amplify.yml  index.html
binder-csr/: Cargo.toml  Trunk.toml  index.html
binder-csr/.cargo/: config.toml
binder-csr/scss/: style.scss
binder-csr/src/: main.rs
binder-csr/style/: main.scss
binder-lambdas/: Cargo.toml
binder-lambdas/article-scraper/: index.js  package-lock.json  package.json
binder-lambdas/get-articles/: Cargo.toml
binder-lambdas/get-articles/src/: main.rs
binder-lambdas/put-article-in-db/: Cargo.toml  put-article-request.json
binder-lambdas/put-article-in-db/src/: main.rs
binder-lambdas/update-article/: Cargo.toml
binder-lambdas/update-article/src/: main.rs
scss/: style.scss
src/: main.rs
types/: Cargo.toml
types/src/: lib.rs
