[package]
name = "binder-csr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.33", features = ["serde"] }
console_log = "1.0.0"
leptonic = { git = "https://github.com/lpotthast/leptonic.git", branch = "main"}
leptos = { version = "0.6.5", features = ["csr"] }
leptos_icons = { version = "0.1.0", features = ["BsList"] }
leptos_router = { version = "0.6.5", features = ["csr"] }
log = "0.4.20"
reqwasm = "0.5.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "*"
thiserror = "1.0.50"
types = { path = "../types"}
ulid = { version = "1.1.0", features = ["serde"] }
url = "2.4.1"


