[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ulid = { version = "1.1.0", features = ["serde"] }
url = "2.4.1"
serde = { version = "1.0.192", features = ["derive"]}
chrono = { version = "0.4.33", features = ["serde"] }
