[package]
name = "get-articles"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = "0.8.3"
lambda_runtime = "0.8.3"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
openssl = { version = "0.10.35", features = ["vendored"] }
reqwest = { version = "0.11.22", default-features=false, features=["rustls-tls"]}
url = "2.4.1"
aws-sdk-dynamodb  = "0.38.0"
aws-types = "0.101.0"
aws-config = "0.101.0"
serde = {version = "1.0.192", features = ["derive"]}

types = { path = "../../types" }
