[package]
name = "put-article-in-db"
version = "0.1.0"
edition = "2021"


[dependencies]
lambda_http = "0.8.3"
lambda_runtime = "0.8.3"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
article_scraper = { version = "*" }
scraper = { version = "0.18.1" }
openssl = { version = "0.10.35", features = ["vendored"] }
reqwest = { version = "0.11.22", default-features = false, features=["rustls-tls"]}
url = { version = "2.4.1" }
aws-sdk-dynamodb = "0.38.0"
aws-types = "0.101.0"
aws-config = "0.101.0"
ulid = "1.1.0"
serde = { version = "1.0.192", features=["derive"]}
serde-wasm-bindgen = "0.4"

types = { path= "../../types"}
