[package]
name = "update-article"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = "0.8.3"
lambda_runtime = "0.8.3"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
url = { version = "2.4" }
aws-sdk-dynamodb = { version = "0.39" }
aws-types = { version = "1.0" }
aws-config = { version = "1.0" }
ulid = { version = "1.1" }
serde = { version = "1.0", features=["derive"]}
serde-wasm-bindgen = { version = "0.4" }
types = { path = "../../types" }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"

